welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: warning: enclosing method getMotif has result type Unit: return value discarded
  return color;
  ^Array1:31: error: not found: value color
  setCouleurBrosse(color(j))
                   ^